# yocaml_blog

./: .gitignore  dune-project  joy_blog.opam  readme.md
.github/workflows/: deploy.ml  deploy.yml  deploy2.ml
assets/css/: reset.css  style.css
assets/templates/: article.html  index.html  layout.html  page.html
content/: index.md
content/articles/: my-first-article.md
content/pages/: about.md  contact.md
